# synapse_protobuf

./: Cargo.toml  build.rs  package.xml
proto/: .finite_state_machine.proto.swp  CMakeLists.txt  bit32_flag.proto  frame.options  frame.proto  input.options  input.proto  led_array.options  pwm.options  pwm.proto  snap_setpoint.proto  status.proto
src/: lib.rs
zephyr/: CMakeLists.txt
